# Ligand-UMAP-Analysis

./: .gitignore  README.md  clustered_molecules_enhanced.csv  molecular_feature_reduction_case.py  pyproject.toml  requirements-chembert.txt  requirements.txt
molecular_feature_case/: __init__.py  cli.py  config.py  dependencies.py  pipeline.py
molecular_feature_case/models/: __init__.py  chembert.py
molecular_feature_case/tools/: __init__.py  clustering.py  descriptors.py  fingerprints.py  io.py  plotting.py  reduction.py  smiles.py
scripts/: demo.ipynb
